@@ -1,3 +1,8 @@
+Trunk
+
+- Opal Gui
+    - Added the number of cpus both in the simple and in the complexin submission form. 
+
 Version 1.9.4:
 
 - Opal Dashboard:
